# goscript

./: .gitignore  Cargo.toml  LICENSE  README.md
backend/: Cargo.toml
backend/src/: code_gen.rs  codegen.rs  ds.rs  instruction.rs  lib.rs  opcode.rs  prim_ops.rs  primitive.rs  proto.rs  state.rs  types.rs  value.rs  values.rs  vm.rs  vm_util.rs
backend/tests/: case1.rs  test.rs
backend/tests/data/: blankid.go  blankid.gos  case1.gos  closure1.gos  closure2.gos  closure3.go  closure3.gos  closure4.gos  declare.go  declare.gos  for.gos  func1.gos  leetcode5.gos  map1.gos  operations.gos  pkg.gos  pointer.gos  slice1.gos  type.gos
codegen/: Cargo.toml
codegen/src/: branch.rs  builtins.rs  call.rs  codegen.rs  codegen_o.rs  consts.rs  context.rs  emit.rs  entry.rs  func.rs  interface.rs  lib.rs  package.rs  selector.rs  types.rs  util.rs
codegen/tests/: test.rs
codegen/tests/data/: case1.gos  closure1.gos  closure2.gos  declare.gos  for.gos  interface.gos  leetcode5.gos  map1.gos  pkg.gos  pointer.gos  slice1.gos  switch.gos  type.gos  typeswitch.gos
codegen/tests/std/math/: math.gos
engine/: Cargo.toml
engine/benches/: leet5_benchmark.rs
engine/src/: engine.rs  ffi.rs  lib.rs  run_fs.rs  run_map.rs  run_zip.rs  source.rs
engine/src/std/: bits.rs  fmt.rs  fmt2.rs  fmt666.rs  io.rs  mod.rs  os.rs  reflect.rs  sync.rs  wasm.rs
engine/src/vfs/: compound.rs  mod.rs  vfs_fs.rs  vfs_map.rs  vfs_zip.rs
engine/std/fmt/: fmt.gos
engine/std/math/: math.gos
engine/std/sync/: sync.gos
engine/tests/: test.rs
engine/tests/demo/: fibonacci.gos  leetcode5.gos  linked.gos
engine/tests/group1/: array.gos  async.gos  basictypes.gos  blankid.gos  case1.gos  channel.gos  closure4.gos  complex.gos  composite.gos  conversion.gos  defer.gos  for.gos  func1.gos  goto.gos  init_func.gos  initorder.gos  interface2.gos  map1.gos  operations.gos  pkg.gos  pointer.gos  recover.gos  select.gos  slice1.gos  type.gos  type1.gos  typeswitch.gos
engine/tests/group2/: case0.gos  case1.gos  case2.gos  case3.gos  display.gos  local.gos  nil.gos  sync_mutex.gos  sync_rwmutex.gos  unicode0.gos
engine/tests/group2/somelib/: some_lib.go
engine/tests/gs/: case1.gos  closure4.gos  func1.gos
engine/tests/gs/group1/: array.gos  basictypes.gos  closure1.gos  closure4.gos  if.gos  leetcode5.gos  linked.gos  pkg.gos  pointer.gos  typeswitch.gos
engine/tests/gs/group2/: case0.gos  case1.gos  case2.gos  case3.gos  display.gos  nil.gos
engine/tests/issues/: issue12.gos  issue16.gos  issue8.gos
engine/tests/std/: bytes.gos  fmt.gos  math.gos  path.gos  reflect.gos  sort.gos  strconv.gos  strings.gos  temp.gos  time.gos
frontend/: Cargo.toml  LICENSE  package-lock.json
frontend/src/: ast.rs  ast_objects.rs  errors.rs  interface.rs  lib.rs  parser.rs  position.rs  scanner.rs  scope.rs  token.rs  visitor.rs
frontend/tests/: parser_test.rs
frontend/tests/data/: case1.gos
note/: upvalue
parser/: Cargo.toml
parser/fuzz/: Cargo.toml
parser/fuzz/fuzz_targets/: parse_file.rs
parser/src/: ast.rs  errors.rs  lib.rs  map.rs  objects.rs  parser.rs  position.rs  scanner.rs  scope.rs  token.rs  visitor.rs
parser/tests/: parser_test.rs
pmacro/: Cargo.toml
pmacro/src/: async_fn.rs  ffi.rs  ffi_impl.rs  ffi_impl666.rs  lib.rs  unsafe_ptr.rs
src/: ast.rs  ast_objects.rs  errors.rs  helpers.rs  lib.rs  parser.rs  position.rs  scanner.rs  scope.rs  token.rs
std/: Cargo.toml
std/bytes/: bytes.go
std/errors/: errors.gos
std/fmt/: fmt.gos
std/fmt2/: fmt2.gos
std/internal/bytealg/: bytealg.gos
std/io/: io.go
std/math/: asin.go  atan.go  atan2.go  dim.go  exp.go  expm1.go  floor.go  frexp.go  hypot.go  ldexp.go  log.go  log10.go  log1p.go  math2.gos  mod.go  modf.go  pow.go  remainder.go  sin.go  sinh.go  sqrt.go  tan.go  unsafe.go
std/os/: file.gos  os.gos
std/reflect/: deepequal.go  makefunc.go  swapper.go  type.go  value.go
std/runtime/: runtime.gos
std/strings/: builder.go  strings.go
std/sync/: map.gos  once.gos  pool.gos  sync.gos
std/sync/atomic/: value.gos
std/time/: sleep.go  time.go  zoneinfo.go
types/: Cargo.toml
types/src/: constant.rs  display.rs  importer.rs  lib.rs  lookup.rs  obj.rs  objects.rs  operand.rs  package.rs  scope.rs  selection.rs  typ.rs  universe.rs  util.rs
types/src/check/: assignment.rs  builtin.rs  call.rs  check.rs  conversion.rs  decl.rs  display.rs  errors.rs  expr.rs  initorder.rs  interface.rs  label.rs  mod.rs  resolver.rs  returns.rs  stmt.rs  typexpr.rs  util.rs
types/tests/: all.rs  test.rs  types_test.rs
types/tests/data/: builtins.gos  const0.gos  const1.gos  constdecl.gos  cycles.gos  cycles2.gos  decls1.src  decls3.src  errors.src  expr3.src  issues.src  stmt0.src  temp.gos  vardecl.src
types/tests/data/all/: constdecl.gos  temp.gos
types/tests/data/all/math/: math.gos
types/tests/data/case1/: pkg.gos
types/tests/data/case2/: interface.gos
types/tests/data/case3/: cycles.gos
types/tests/data/case4/: decl.gos
types/tests/data/case5/math/: math2.gos
types/tests/data/case6/: init.gos
types/tests/data/case7/: expr.gos
types/tests/data/case8/: stmt.gos
types/tests/data/decls2/: decls2a.src  decls2b.src
types/tests/data/importdecl0/: importdecl0a.src  importdecl0b.src
types/tests/data/importdecl1/: importdecl1a.src
types/tests/data/math/: math2.gos
types/tests/data/simple/: simple.gos
types/tests/data/time/: time.gos
vm/: Cargo.toml
vm/src/: bytecode.rs  channel.rs  dispatcher.rs  ds.rs  ffi.rs  gc.rs  instruction.rs  instruction_o.rs  lib.rs  metadata.rs  objects.rs  opcode.rs  stack.rs  stack2.rs  value.rs  value32.rs  vm.rs  vm2.rs  vm_util.rs
