[package]
name = "go-codegen"
version = "0.1.0"
authors = ["oxfeeefeee <pb01005051@gmail.com>"]
edition = "2021"

[features] 
default = []
async = ["go-vm/async"]  
btree_map = ["go-parser/btree_map"]

[dependencies]

[dependencies.go-parser]
path = "../parser"
version = "0.1.0"

[dependencies.go-vm]
path = "../vm"
version = "0.1.0"

[dependencies.go-types]
path = "../types"
version = "0.1.0"

[dev-dependencies]
time-test = "0.2.2"