[package]
name = "goscript-engine"
version = "0.1.0"
authors = ["oxfeeefeee <pb01005051@gmail.com>"]
edition = "2021"

[features] 
default = ["read_fs", "async", "go_std", "codegen", "instruction_pos"]
read_fs = []
read_zip = ["dep:zip"] 
async = ["goscript-codegen/async", "goscript-vm/async"]  
go_std = [] 
btree_map = ["goscript-parser/btree_map", "goscript-codegen/btree_map", "goscript-vm/btree_map"]
codegen = []
instruction_pos = ["goscript-vm/instruction_pos"] 
  
[dependencies]   
futures-lite = "1.12.0"
zip = { version = "0.6.2", features = ["deflate"], default-features = false, optional = true }
lazy_static = "1.4.0"
borsh = "0.9.3"
base64 = "0.13.0"

[dependencies.goscript-parser] 
path = "../parser"
version = "0.1.0" 

[dependencies.goscript-vm] 
path = "../vm"
version = "0.1.0"

[dependencies.goscript-types] 
path = "../types"
version = "0.1.0"

[dependencies.goscript-codegen]
path = "../codegen"
version = "0.1.0"
   
[dependencies.goscript-pmacro]
path = "../pmacro"
version = "0.1.0"

[dev-dependencies]
time-test = "0.2.2"
criterion = "0.3"

[[bench]]
name = "leet5_benchmark"
harness = false

