[package]
name = "goscript-engine"
version = "0.1.0"
authors = ["oxfeeefeee <pb01005051@gmail.com>"]
edition = "2021"

[features] 
default = ["read_fs", "async", "go_std", "codegen", "instruction_pos"]
read_fs = []
read_zip = ["dep:zip"] 
async = ["goscript-codegen/async", "goscript-vm/async"]  
go_std = [] 
btree_map = ["goscript-parser/btree_map", "goscript-codegen/btree_map", "goscript-vm/btree_map"]
codegen = []
instruction_pos = ["goscript-vm/instruction_pos"] 
serde_borsh = ["dep:borsh", "goscript-vm/serde_borsh"]
wasm = ["dep:wasm-bindgen", "dep:instant", "dep:getrandom"]

[dependencies]   
futures-lite = "1.12.0"
lazy_static = "1.4.0"
zip = { version = "0.6.2", features = ["deflate"], default-features = false, optional = true }
borsh = { version = "0.9.3", optional = true } 

wasm-bindgen = { version = "0.2.84", optional = true }  
instant = { version = "0.1", features = ["wasm-bindgen"], optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }


[dependencies.goscript-parser] 
path = "../parser"
version = "0.1.0" 

[dependencies.goscript-vm] 
path = "../vm"
version = "0.1.0"

[dependencies.goscript-types] 
path = "../types"
version = "0.1.0"

[dependencies.goscript-codegen]
path = "../codegen"
version = "0.1.0"
   
[dependencies.goscript-pmacro]
path = "../pmacro"
version = "0.1.0"

[dev-dependencies]
time-test = "0.2.2"
criterion = "0.3"

[[bench]]
name = "leet5_benchmark"
harness = false

