[package]
name = "go-engine"
version = "0.1.0"
authors = ["oxfeeefeee <pb01005051@gmail.com>"]
edition = "2021"
license = "BSD"
repository = "https://github.com/oxfeeefeee/goscript/"
keywords = ["golang", "goscript"]
categories = ["scripting language", "programming language", "compiler"]
description = "The wrapper of the Goscript project."

[features] 
default = ["read_fs", "async", "go_std", "codegen", "instruction_pos"]
read_fs = []
read_zip = ["dep:zip"] 
async = ["go-codegen/async", "go-vm/async"]  
go_std = [] 
btree_map = ["go-parser/btree_map", "go-codegen/btree_map", "go-vm/btree_map"]
codegen = []
instruction_pos = ["go-vm/instruction_pos"] 
serde_borsh = ["dep:borsh", "go-vm/serde_borsh"]
wasm = ["dep:wasm-bindgen", "dep:instant", "dep:getrandom"]

[dependencies]   
futures-lite = "1.12.0"
lazy_static = "1.4.0"
zip = { version = "0.6.2", features = ["deflate"], default-features = false, optional = true }
borsh = { version = "0.9.3", optional = true } 

wasm-bindgen = { version = "0.2.84", optional = true }  
instant = { version = "0.1", features = ["wasm-bindgen"], optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }

go-parser = { version = "0.1.0", path = "../parser" }
go-vm = { version = "0.1.0", path = "../vm" }
go-types = { version = "0.1.0", path = "../types" }
go-codegen = { version = "0.1.0", path = "../codegen" }
go-pmacro = { version = "0.1.0", path = "../pmacro" }

[dev-dependencies]
time-test = "0.2.2"
criterion = "0.3"

[[bench]]
name = "leet5_benchmark"
harness = false

