[package]
name = "go-parser"
version = "0.1.1"
authors = ["oxfeeefeee <pb01005051@gmail.com>"]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/oxfeeefeee/goscript/"
keywords = ["golang", "parser", "goscript"]
categories = ["compiler", "parser"]
description = "The parser of the Goscript project."

[features] 
default = []
btree_map = []
serde_borsh = ["dep:borsh"]

[dependencies]
borsh = { version ="~0.10", optional = true } 