[package]
name = "go-pmacro"
version = "0.1.4"
edition = "2021"
license = "BSD-2-Clause	"
repository = "https://github.com/oxfeeefeee/goscript/"
description = "Provides some proc-macros for the goscript project"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[lib]
proc-macro = true