[package]
name = "goscript-types"
version = "0.1.0"
authors = ["oxfeeefeee <pb01005051@gmail.com>"]
edition = "2021"

[features] 
default = [] 
btree_map = ["goscript-parser/btree_map"]

[dependencies]
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
ordered-float = "3.0"

[dev-dependencies]
regex = "1"

[dependencies.goscript-parser]
path = "../parser"
version = "0.1.0"