[package]
name = "go-vm"
version = "0.1.3"
authors = ["oxfeeefeee <pb01005051@gmail.com>"]
edition = "2021"
license = "BSD-2-Clause"
repository = "https://github.com/oxfeeefeee/goscript/"
keywords = ["golang", "vm", "goscript"]
categories = ["programming language", "vm"]
description = "The vm of the Goscript project."

[features] 
default = []
async = ["dep:async-channel", "dep:async-executor", "dep:futures-lite", "dep:fastrand"]  
btree_map = ["go-parser/btree_map"]
instruction_pos = []
serde_borsh = ["dep:borsh", "go-parser/serde_borsh"]

[dependencies]
ordered-float = "3.0"
async-channel = { version = "1.6.1", optional = true }
async-executor = { version ="1.4.1", optional = true }
futures-lite = { version ="1.12.0", optional = true }
fastrand = { version ="1.9.0", optional = true }
borsh = { version ="~0.10", optional = true } 

go-parser = { version = "0.1.1", path = "../parser" }
go-pmacro = { version = "0.1.0", path = "../pmacro" }

[dev-dependencies]
time-test = "0.2.2"